src/objects/Action_Objective_Result__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan_Objective__c</fullName>
        <label>Action Plan Objective</label>
        <referenceTo>Action_Plan_Objective__c</referenceTo>
        <relationshipLabel>Action Objective Results</relationshipLabel>
        <relationshipName>Action_Objective_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Initials__c</fullName>
        <label>Initials</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Date_Part__c</fullName>
        <description>The date part of the service time.</description>
        <label>Service_Date_Part</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Provided__c</fullName>
        <label>Service Provided</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Time__c</fullName>
        <label>Service Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Leave/Absent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitalized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Action Objective Result</label>
    <nameField>
        <label>Action Objective Tracking Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Objective Results</pluralLabel>
    <recordTypes>
        <fullName>Service_Objective</fullName>
        <active>true</active>
        <label>Service_Objective</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>